@@ -317,6 +317,14 @@ function htmlcdnboxes(req,res) {
       '<title>' + cdnboxStates.local.config.name + ' CDNBoxes</title>\n' +
       '<style>' + css + '</style>\n' +
       `<script>
+
+         function rnum(num) {
+           if (num > 10000000000) return Math.floor(num/1000000000) + 'G';
+           if (num > 10000000) return Math.floor(num/1000000) + 'M';
+           if (num > 10000) return Math.floor(num/1000) + 'K';
+           return(num);
+         }
+
          window.addEventListener("message", (event) => {
            if (event.data.cdnboxes !== undefined) {
 	     if (event.data.cdnboxes) document.getElementById("tcdnbox").style.display = "table";
@@ -352,9 +360,9 @@ function htmlcdnboxes(req,res) {
     `);
   } else {
     res.write(`
-                   cells[1].innerHTML = applistats[cdnboxname].count;
+                   cells[1].innerHTML = rnum(applistats[cdnboxname].count);
 		   } else {
-	             cells[j].innerHTML = applistats[cdnboxname][cells[j].getAttribute('data-cdnbox')].count;
+	             cells[j].innerHTML = rnum(applistats[cdnboxname][cells[j].getAttribute('data-cdnbox')].count);
     `);
   }
   res.write(`
@@ -379,7 +387,7 @@ function htmlcdnboxes(req,res) {
   if (req.url.includes('applisdelta=true')) {
     res.write(' cells[2].innerHTML = aliasstats[aliasname].count - memoaliasstats[aliasname].count;');
   } else {
-    res.write(' cells[2].innerHTML = aliasstats[aliasname].count;');
+    res.write(' cells[2].innerHTML = rnum(aliasstats[aliasname].count);');
   }
   res.write(`
                }
@@ -667,12 +675,12 @@ function aliasmanager(res) {
     </head>
     <body>
       <div style="position:absolute; top:10px; right:10px;">
-        <input type="button" value="&times;" onclick="aliasmanagerclose();">
+        <input type="button" value="&times;" style="font-size: 140%;" onclick="aliasmanagerclose();">
       </div>
       <h1>Alias manager</h1>
       <form>
       <div id="aliasmenu" style="position:relative;">
-        <div style="position:absolute; top:0px; right:5px;">
+        <div style="position:absolute; top:1px; right:2px;">
 	  <input type="button" id="update" value="Publish" onclick="updatealiases();">
 	</div>
         <span>Release: </span><span id="release">` + cdnboxStates.alias.release + `</span>
@@ -711,8 +719,9 @@ function aliasmanager(res) {
 }
 
 function rnum(num) {
-  if (num > 10000000) return Math.round(num/1000000) + 'M';
-  if (num > 10000) return Math.round(num/1000) + 'K';
+  if (num > 10000000000) return Math.floor(num/1000000000) + 'G';
+  if (num > 10000000) return Math.floor(num/1000000) + 'M';
+  if (num > 10000) return Math.floor(num/1000) + 'K';
   return(num);
 }
 
