@@ -1,3 +1,5 @@
+* 1621271140
+ - reduce count number size in aliases and applis.
 * 1621193262
  - reduce count number size in aliasmanager. 
  - Alias manager makeup. 
